Edited image tag

--- a/properties-sale.html
+++ b/properties-sale.html
@@ -95,7 +95,7 @@
                           <div class="row">
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/01.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/01.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Lower Elgon View (Block 13) - Eldoret Town</h5>
                                   <p class="card-text">
@@ -112,7 +112,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/02.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/02.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">King Square Apartments</h5>
                                   <p class="card-text">
@@ -128,7 +128,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/03.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/03.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Upper Elgon View (Block 14)</h5>
                                   <p class="card-text">
@@ -145,7 +145,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/04.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/04.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kiahuria Near Ndarugo - Juja</h5>
                                   <p class="card-text">
@@ -162,7 +162,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/05.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/05.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kiawara - Nyeri</h5>
                                   <p class="card-text">
@@ -179,7 +179,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/06.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/06.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Ruring’u - Nyeri</h5>
                                   <p class="card-text">
@@ -196,7 +196,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/07.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/07.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kajiado/Kipeto – Kajiado West Area</h5>
                                   <p class="card-text">
@@ -213,7 +213,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/08.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/08.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Kajiado/Kitengela – Isinya Area</h5>
                                   <p class="card-text">
@@ -230,7 +230,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/09.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/09.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Ndarasha area - Ruiru Sub-County</h5>
                                   <p class="card-text">
@@ -247,7 +247,7 @@
 
                             <div class="col-lg-3 col-md-6 py-3">
                               <div class="card" style="width: 18rem; height: 30rem;">
-                                <img class="card-img-top" style="height: 13rem;" src="img/properties/sale/10.jpg" alt="Property for Sale Image">
+                                <img class="card-img-top" style="height: 13rem;" src="img/properties/Sale/10.jpg" alt="Property for Sale Image">
                                 <div class="card-body d-flex flex-column">
                                   <h5 class="card-title">Gilgil Eburru</h5>
                                   <p class="card-text">
