Edited the logo, Added carousel on index page

--- a/contact.html
+++ b/contact.html
@@ -30,14 +30,14 @@
             <div class="header">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-lg-2">
+                        <div class="col-lg-6">
                             <div class="brand">
                                 <a href="index.html">
-                                    <img src="img/logo.jpg" alt="Company Logo">
+                                    <img src="img/logo.png" alt="Company Logo">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-10">
+                        <div class="col-lg-6">
                             <div class="topbar">
                                 <div class="topbar-col">
                                     <a href="tel:+254 790 497 125"><i class="fa fa-phone-alt"></i>+254 790 497 125</a>
@@ -108,13 +108,13 @@
                         <div class="col-md-6">
                             <h2 class="section-title">Get In Touch</h2>
                             <div class="contact-info">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.850951356636!2d36.83386311404282!3d-1.2617285359540085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f17b420691523%3A0xbfc2c2023593622b!2sMuthaiga%20Flats!5e0!3m2!1sen!2ske!4v1644764180101!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127648.57582956359!2d36.891029258203126!3d-1.1476294999999954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f47185f2e74e9%3A0xec595c62462ee957!2sSNN%20PLAZA%20RUIRU!5e0!3m2!1sen!2ske!4v1648729019323!5m2!1sen!2ske" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 <h3>How to reach us:</h3>
-                                <p>Our headquaters are at Nairobi-Kenya; Muthaiga flats, off Thika road. We also have branches
-                                in Eldoret Town;2nd Floor Safina Plaza Suite S14 Ronald Ngala Street and Nyeri Town 4thFloor,
-                                Gatemu Building.
+                                <p>Our headquaters are at Nairobi-Kenya; SNN Plaza 4th Floor Rm 5 Githunguri Road Nxt Rafiki MFB. 
+                                We also have branches in Eldoret Town;2nd Floor Safina Plaza Suite S14 Ronald Ngala Street and 
+                                Nyeri Town 4thFloor,Gatemu Building.
                                 </p>
-                                <h3>Mobile <span>+254 790 497 125 or +254 703 352 280</span></h3>
+                                <h3>Mobile <span>+254 786 144 099</span></h3>
                                 <h3>E-mail <span>citadelvaluers@gmail.com</span></h3>
                             </div>
                         </div>
@@ -124,13 +124,13 @@
                                 <div class="editor-item">
                                     <div class="editor-text">
                                         <h3>Nairobi Office</h3>
-                                        <a href="tel:+254790497125">+254 790 497 125</a>
+                                        <a href="tel:+254790497125">+254 786 144 099</a>
                                     </div>
                                 </div>
                                 <div class="editor-item">
                                     <div class="editor-text">
                                         <h3>Eldoret Office</h3>
-                                        <a href="tel:+254786144099">+254 786 144 099</a>
+                                        <a href="tel:+254786144099">+254 790 497 125</a>
                                     </div>
                                 </div>
                                 <div class="editor-item">
