--- a/about.html
+++ b/about.html
@@ -30,14 +30,14 @@
             <div class="header">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-lg-2">
+                        <div class="col-lg-6">
                             <div class="brand">
                                 <a href="index.html">
-                                    <img src="img/logo.jpg" alt="Company Logo">
+                                    <img src="img/logo.png" alt="Company Logo">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-10">
+                        <div class="col-lg-6">
                             <div class="topbar">
                                 <div class="topbar-col">
                                     <a href="tel:+254 790 497 125"><i class="fa fa-phone-alt"></i>+254 790 497 125</a>
