--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <div class="header">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-lg-2">
+                        <div class="col-lg-6">
                             <div class="brand">
                                 <a href="index.html">
-                                    <img src="img/logo.jpg" alt="Company Logo">
+                                    <img src="img/logo.png" alt="Company Logo">
                                 </a>
                             </div>
                         </div>
-                        <div class="col-lg-10">
+                        <div class="col-lg-6">
                             <div class="topbar">
                                 <div class="topbar-col">
                                     <a href="tel:+254 790 497 125"><i class="fa fa-phone-alt"></i>+254 790 497 125</a>
@@ -86,20 +86,59 @@
 
             <!-- Hero Start -->
             <div class="hero">
-                <div class="container-fluid">
-                    <div class="row align-items-center">
-                        <div class="col-md-6">
-                            <h2></h2>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#myCarousel" data-slide-to="1"></li>
+                      <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="first-slide" src="./img/Hero/01.jpg" alt="First slide">
+                        <div class="container">
+                          <div class="carousel-caption text-center">
                             <h2><span>Citadel Valuers</span> <span style="color:crimson;">Limited</span></h2>
                             <p> Market leader in quality, innovative and reliable real estate advisory, 
                             management and agency services in Kenya and beyond.</p>
                             <a class="btn" href="contact.html">Contact Us</a>
+                          </div>
                         </div>
-                        <div class="col-md-6">
-                            <img src="img/hero.jpg" alt="Image">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="second-slide" src="./img/Hero/02.jpg" alt="Second slide">
+                        <div class="container">
+                          <div class="carousel-caption text-center">
+                            <h2><span style="color:crimson;">Best Offers</span> <span>in the Market</span> </h2>
+                            <p>Take our help to reach the top level. Our services are anchored on creativity, flexibility,
+                            and innovative approaches to our work. 
+                            </p>
+                            <p><a class="btn" href="services.html" role="button">Learn more</a></p>
+                          </div>
                         </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="third-slide" src="./img/Hero/03.jpg" alt="Third slide">
+                        <div class="container">
+                          <div class="carousel-caption text-center">
+                            <h2><span style="color:crimson;">Get a Quote</span> <span>from us Today</span> </h2>
+                            <p>In need of real estate agency services today? We are the best bet for you. We offer 
+                            Property management, Property valuation, Asset tagging, Estate Agency and Feasibility studies
+                            services at affordable rates.
+                            </p>
+                            <p><a class="btns" href="services.html" role="button">Learn more</a></p>
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                </div>
+                    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
             </div>
             <!-- Hero End -->
             
@@ -120,9 +159,9 @@
                                 and Nyeri.
                             </p>
                             <p>
-                                Our headquaters are at Nairobi-Kenya; Muthaiga flats, off Thika road. We also have branches
-                                in Eldoret Town;2nd Floor Safina Plaza Suite S14 Ronald Ngala Street and Nyeri Town 4thFloor,
-                                Gatemu Building.
+                                Our headquaters are at Nairobi-Kenya; SNN Plaza 4th Floor Rm 5 Githunguri Road Nxt Rafiki MFB. 
+                                We also have branches in Eldoret Town;2nd Floor Safina Plaza Suite S14 Ronald Ngala Street and 
+                                Nyeri Town 4thFloor,Gatemu Building.
                             </p>
                             <a class="btn" href="about.html">Learn More</a>
                         </div>
